--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
+    "react-toastify": "^11.0.5",
+    "redux": "^5.0.1",
     "sass": "^1.90.0"
   },
   "devDependencies": {
