--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
+    "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.11.1",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
-    "sass": "^1.90.0"
+    "sass": "^1.90.0",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
