--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
