--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@mui/x-charts": "^8.12.0",
     "@mui/x-date-pickers": "^8.11.1",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.8.2",
@@ -30,6 +31,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "redux": "^5.0.1",
     "sass": "^1.90.0",
     "yup": "^1.7.0"
