--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
+    "gsap": "^3.13.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
