--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "recharts": "^3.2.1",
     "redux": "^5.0.1",
     "sass": "^1.90.0",
+    "swiper": "^12.0.2",
     "yup": "^1.7.0"
   },
   "devDependencies": {
